--- a/css/theme.css
+++ b/css/theme.css
@@ -95,11 +95,10 @@
 	list-style:none;
 	padding: 0;
 	margin: 0;
-	overflow: hidden;
-	text-align:center;
+	overflow: hidden;	
 }
  .main-menu li {
-	display:inline-block;
+	float:left;
 }
 
 .main-menu li.first-item {
@@ -121,7 +120,7 @@
 	font-family: '맑은 고딕', AppleGothic;
 	color: #0e5565;
 	display: inline-block;
-	padding: 9px 16px 3px 20px;
+	padding: 9px 20px 7px 20px;
 	border-bottom: solid 2px transparent;
 }
 
